[package]
name = "cli"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.1", features = ["full"] }
lib = { path = "../lib" }
tracing-error =  "0.1.2"
tracing-opentelemetry = "0.13.0"
tracing-subscriber = "0.2.19"
opentelemetry = "0.14.0"
opentelemetry-semantic-conventions = "0.6.0"
opentelemetry-otlp = "0.7.0"
color-eyre = "0.5.11"

[dev-dependencies]
