[package]
name = "lib"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
kube = "0.57.0"
kube-runtime = "0.57.0"
tracing = "0.1.26"
k8s-openapi = { version = "0.12.0", features = ["v1_16"], default-features = false }
futures = "0.3.15"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
tokio = { version = "1.7.1", features = ["macros"] }

[dev-dependencies]
